--- a/src/app/student-details/student-details.component.html
+++ b/src/app/student-details/student-details.component.html
@@ -25,7 +25,7 @@
     </div>
   </div>
 
-
+<!--Student Details-->
   <div class="row">
     <div class="col-sm-12">
       <div class="panel panel-primary">
@@ -64,7 +64,7 @@
     </div>
   </div>
 
-
+<!--Student Form -->
   <div class="row">
     <div class="col-sm-12">
       <div class="panel panel-primary">
